[tool.poetry]
name = "panthera"
version = "0.5.2"
description = "Package for calculating thermochemistry with anharmonic corrections"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
maintainers = ["Lukasz Mentel <lmmentel@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/lmmentel/panthera"
repository = "https://github.com/lmmentel/panthera"
keywords = ["vibrations", "anharmonic", "thermochemistry", "chemistry", "physics"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
ase = "^3.22.0"
lxml = "^4.6.3"
numpy = "^1.21.1"
numpydoc = "^1.1.0"
matplotlib = "^3.4.3"
pandas = "^1.3.1"
scipy = "^1.7.1"
bmatrix = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
bump2version = "^1.0.0"
pylint = "^2.5.3"
pytest = "^3.0"
pytest-cov = "^2.4"
pytest-sugar = "^0.9.4"


[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
